--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
       "@breakpoints": ["./src/styles/variables/_breakpoints.scss"],
       "@fonts": ["./src/styles/variables/_font-family.scss"],
       "@mixins/*": ["./src/styles/mixins/*"],
+      "@typography/*": ["./src/styles/typography/*"],
+      "@variables/*": ["./src/styles/variables/*"],
       "@common/*": ["./src/components/common/*"],
       "@components/*": ["./src/components/*"],
       "@utils/*": ["./src/utils/*"]
